<resources>
    <string name="app_name">Methodic</string>
    <string name="action_settings">Settings</string>
    <string name="test">Тестове питання?</string>
    <string name="next">Наступне</string>
    <string name="bred">Це відповідь на тестове питання. Олололололололололололололололололололололололлоллллллллллоооооооооооооооооооооооооллллллллл</string>
    <string name="card_header">Назва предмету</string>
    <string name="status">Статус виконання:</string>
    <string name="process">В процесі</string>
    <string name="remind">Нагадувати про предмет</string>
    <string name="img_attr">imageAttr</string>
    <string name="motivation">Мотивація:</string>
    <string name="hello">Вітаємо!</string>
    <string name="write_the_name">Введіть своє ім’я</string>
    <string name="write_the_email">Введіть свою електронну пошту</string>
    <string name="start">Почати</string>
    <string name="menu_item1">Всі методики</string>
    <string name="menu_item2">item2</string>
    <string name="menu_item3">item3</string>
    <string name="menu_item4">item4</string>
    <string name="add_note">Додати</string>
    <string name="write_name_note">Введіть ім’я нотатки</string>
    <string name="write_text_note">Напишіть нотатку</string>
    <string name="write_name_subject">Напишіть назву предмета</string>
    <string name="write_motivation">Напишіть свою мотивацію</string>
    <string name="choose_picture">Зображення:</string>
    <string name="dali">Готово</string>
    <string name="empty_notes">Тут розміщюються нотатки,\nНатисніть + щоб додати нову</string>
    <string name="empty_subjects">Тут розміщюються предмети,\nНатисніть + щоб додати новий</string>
    <string name="rate">Рейтинг</string>
    <string name="counr_subject">Предмети</string>
    <string name="zero">0</string>
    <string name="zero5">0/5</string>
    <string name="check">Пройти перевірку</string>
    <string name="citata">Если тебе плюют в спину - ты идешь вперёд</string>

    <string name="methodics">Методики</string>
    <string name="subjects">Предмети</string>
    <string name="notes">Нотатки</string>
    <string name="help">Допомога</string>
    <string name="about">Про додаток</string>
    <string name="newpunkt">Новий</string>

    <string name="help_description">1) При запуску додатку ви бачите головне вікно,
        на якому розташований основний функціонал, а саме: перегляд предметів,
        методик, нотаток, допомога, а також статистика \n2) Щоб додати новий предмет - необхідно перейти до вікна Методики та натиснути +
    \n3) Створюйте нові нотатки в предметі та переглядайте їх у головному вікні або вікні предмету\nПриємного користування!</string>

    <string name="about_description">Даний додаток призначений для візуалізації методів які призначені для полегшення процесу навчання.</string>

    <array name="status_array">
        <item>
            В процесі
        </item>
        <item>
            Не вивчаю
        </item>
        <item>
            Активно вивчаю
        </item>
    </array>

    <array name="img_name_spinner">
        <item>
            Алохус
        </item>
        <item>
            Франчезис
        </item>
        <item>
            Санвояж
        </item>
        <item>
            Фуркаах
        </item>
        <item>
            Кинесит
        </item>
        <item>
            Рубістон
        </item>
        <item>
            Лоліпоп
        </item>
    </array>

    <string-array name="img_spinner">
        <item>
            imageCard1
        </item>
        <item>
            imageCard2
        </item>
        <item>
            imageCard3
        </item>
        <item>
            imageCard4
        </item>
        <item>
            imageCard5
        </item>
        <item>
            imageCard6
        </item>
        <item>
            imageCard7
        </item>
    </string-array>
</resources>
