<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/newSubjectName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="40dp"
            android:focusable="true"
            android:fontFamily="sans-serif-light"
            android:hint="@string/write_name_subject"
            android:inputType="textPersonName"
            android:maxLength="15" />

        <EditText
            android:id="@+id/motivationEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newSubjectName"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:hint="@string/write_motivation"
            android:inputType="textWebEmailAddress"
            android:maxLength="100" />


        <Button
            android:id="@+id/startButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/spinner"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/dali"
            android:textColor="?attr/colorPrimary" />

        <TextView
            android:id="@+id/chooseImgTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/choose_picture"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/motivationEdit"
            android:layout_centerHorizontal="true" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/motivationEdit"
            android:layout_alignStart="@+id/motivationEdit"
            android:layout_below="@+id/chooseImgTextView"
            android:drawSelectorOnTop="true" />
    </RelativeLayout>
</ScrollView>