<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageSubject"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/img_attr"
        android:scaleType="centerCrop"
        android:src="@drawable/menu" />

    <RelativeLayout
        android:id="@+id/headerTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageSubject"
        android:background="@color/transperency_black">

        <TextView
            android:id="@+id/headerCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/card_header"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/card_color" />
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/writeNoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_border_color"
        android:layout_alignTop="@+id/headerTextLayout"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="5dp" />

    <TextView
        android:id="@+id/statusTextView"
        android:fontFamily="sans-serif-light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/status"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/primary_text"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/notesList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/headerTextLayout" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:entries="@array/status_array"
        android:id="@+id/statusSpinner"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/statusTextView"
        android:layout_alignTop="@+id/statusTextView"
        android:textAlignment="center" />


</RelativeLayout>